# xiaopaw-team

./: .gitignore  README.md  config.yaml.template  pyproject.toml  pytest.ini  sandbox-docker-compose.yaml
docs/: DESIGN.md  README.md  design-modules.md  test-cases-e2e.md  test-design.md
docs/history/: v0.2-architecture.md  v0.3-detailed-flow.md  v1.1-team-only.md
tests/integration/: test_autonomous_handshake.py  test_e2e_full_journey.py  test_e2e_smoke.py  test_runner_routing.py
tests/unit/: test_build_role_tools.py  test_event_log.py  test_feishu_bridge.py  test_log_query.py  test_mailbox.py  test_main_bootstrap.py  test_self_score.py  test_skill_quality.py  test_tasks_store.py  test_team_tools.py  test_workspace.py
workspace/manager/: agent.md  memory.md  soul.md  user.md
workspace/pm/: agent.md  memory.md  soul.md  user.md
workspace/qa/: agent.md  memory.md  soul.md
workspace/rd/: agent.md  memory.md  soul.md
workspace/shared/: team_protocol.md
xiaopaw_team/: _runner_base.py  main.py  models.py  runner.py
xiaopaw_team/agents/: __init__.py  _main_crew_base.py  build.py  skill_crew.py
xiaopaw_team/api/: capture_sender.py  test_server.py
xiaopaw_team/cron/: service.py  tasks_store.py
xiaopaw_team/feishu/: downloader.py  listener.py  sender.py
xiaopaw_team/memory/: bootstrap.py  context_mgmt.py  indexer.py
xiaopaw_team/observability/: metrics_server.py
xiaopaw_team/session/: manager.py
xiaopaw_team/tools/: _skill_loader_base.py  event_log.py  feishu_bridge.py  log_query.py  mailbox.py  self_score.py  skill_loader.py  team_tools.py  (+1 more)
(+42 files in other folders)
